# media_shelf

./: .gitignore  MIGRATIONS.md  MVP.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-windows.yml
database/: schema.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs  media_scan.rs
src/lib/: tauri.ts  types.ts
src/lib/components/: MediaGrid.svelte  MediaViewer.svelte  TagEditor.svelte  TagFilterPanel.svelte
src/lib/stores/: mediaPreviewStore.ts  mediaStore.ts  tagStore.ts
src/routes/: +page.svelte
